--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,8 @@ img {
     min-width: 160px;
     height: 40px;
     padding-top: 8px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 
     text-transform: uppercase;
     text-align: center;
@@ -106,14 +107,18 @@ img {
     background-color: #f0c52e;
 
     z-index: -1;
-    transition-duration: 0.5s;
+    -webkit-transition-duration: 0.5s;
+         -o-transition-duration: 0.5s;
+            transition-duration: 0.5s;
 }
 
 .button:hover::before,
 .button:focus::before {
     top: 0;
     height: 100%;
-    transition-duration: 0.5s;
+    -webkit-transition-duration: 0.5s;
+         -o-transition-duration: 0.5s;
+            transition-duration: 0.5s;
 }
 
 .button:active {
@@ -123,11 +128,21 @@ img {
 /*header*/
 
 .main-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding: 0 60px;
     min-height: 226px;
+
+    background-image: -webkit-linear-gradient(top, white 40px, #f7e296 40px);
+
+    background-image: -o-linear-gradient(top, white 40px, #f7e296 40px);
 
     background-image: linear-gradient(to bottom, white 40px, #f7e296 40px);
     background-color: #f7e296;
@@ -146,8 +161,13 @@ img {
 }
 
 .main-logo {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     margin-top: 21px;
-    margin-bottom: 17px;
+    margin-bottom: 26px;
+    /* Style for "logo" */
+width: 163px;
+height: 35px;
 }
 
 .logo:hover,
@@ -166,8 +186,12 @@ img {
 }
 
 .main-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 
     margin-bottom: 20px;
 }
@@ -187,6 +211,8 @@ img {
 }
 
 .form-search form {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -273,7 +299,8 @@ img {
     display: block;
     padding: 0 18px;
     padding-top: 7px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 
     opacity: 0;
 
@@ -281,14 +308,23 @@ img {
 }
 
 .authorization-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 .main-menu .authorization-header {
     position: relative;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-left: 31px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 290px;
 }
@@ -381,9 +417,17 @@ img {
 .main-nav {
     position: relative;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 .main-nav h2,
@@ -450,8 +494,11 @@ img {
 }
 
 .header-service {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin: 0;
     padding: 0;
     width: 500px;
@@ -469,6 +516,8 @@ img {
 }
 
 .main-nav .header-cotalog {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin: 0;
     padding: 0;
@@ -495,7 +544,9 @@ img {
     top: 3px;
     left: -60px;
 
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+
+            box-sizing: border-box;
     width: 1160px;
     padding-top: 45px;
     padding-left: 60px;
@@ -532,8 +583,14 @@ img {
     top: 362px;
     right: 102px;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin: 0;
     padding: 0;
     width: 80px;
@@ -557,7 +614,8 @@ img {
 
     padding: 0 20px;
     margin-top: -33px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 
     list-style: none;
 }
@@ -578,6 +636,10 @@ img {
 
 .slider-item .offers {
     position: relative;
+
+    display: -webkit-box;
+
+    display: -ms-flexbox;
 
     display: flex;
 }
@@ -729,7 +791,8 @@ img {
 
 .slider-item b {
     display: block;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-left: 5px;
     padding-right: 98px;
     margin-bottom: 19px;
@@ -801,7 +864,11 @@ img {
 /*index-catalog*/
 
 .index-cotalog-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin: 0;
     padding: 0;
     margin-left: -40px;
@@ -929,13 +996,21 @@ img {
     margin-bottom: 95px;
 
     background-color: #e5e5e5;
+    background-image: -webkit-linear-gradient(top,
+        #ffffff 100px, #e5e5e5 100px );
+    background-image: -o-linear-gradient(top,
+        #ffffff 100px, #e5e5e5 100px );
     background-image: linear-gradient(to bottom,
         #ffffff 100px, #e5e5e5 100px );
 }
 
 .service {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-start;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     padding: 0;
     padding-top: 70px;
 }
@@ -1068,8 +1143,11 @@ img {
 /*brands*/
 
 .brands {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin: 0;
     padding: 0;
     margin-bottom: 93px;
@@ -1087,7 +1165,8 @@ img {
     -ms-filter: grayscale(100%);
     -o-filter: grayscale(100%);
     filter: grayscale(100%);
-    filter: gray; /* IE 6-9 */
+    -webkit-filter: gray;
+            filter: gray; /* IE 6-9 */
 
     opacity: 0.3;
 }
@@ -1107,8 +1186,12 @@ img {
 /*info*/
 
 .info {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .info section:first-child {
@@ -1203,7 +1286,8 @@ img {
 .main-catalog h1 {
     margin-top: 36px;
     padding-left: 60px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     margin-bottom: 25px;
 
     font-size: 47px;
@@ -1212,8 +1296,13 @@ img {
 }
 
 .breadcrumbs {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin-top: 0;
     padding: 0;
     padding-left: 60px;
@@ -1268,16 +1357,28 @@ img {
 }
 
 .filter-background {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .filter-catalog {
     position: relative;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 328px;
     padding-left: 60px;
 }
@@ -1300,7 +1401,8 @@ img {
 .filter-catalog h3,
 .catalog-sorting h3{
     position: relative;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     margin: 0;
     padding: 0;
     min-height: 70px;
@@ -1343,7 +1445,8 @@ img {
 
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 .form-checkbox fieldset::before {
@@ -1438,7 +1541,7 @@ img {
 .price-controls input {
     width: 80px;
 
-    font-family: "PT Sans", Arial, sans-serif;
+    font-family: "PT Sans", "Arial", sans-serif;
     font-size: 17px;
     font-weight: 400;
     line-height: 18px;
@@ -1524,7 +1627,8 @@ img {
 
     width: 23px;
     height: 23px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 
     border: 2px solid #000000;
     border-radius: 3px;
@@ -1571,7 +1675,8 @@ img {
 
     width: 25px;
     height: 25px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 
     border: 5px solid #000000;
     border-radius: 50%;
@@ -1586,7 +1691,8 @@ img {
 
     width: 9px;
     height: 9px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 
     background-color: #000000;
     border-radius: 50%;
@@ -1611,7 +1717,8 @@ img {
 /*catalog*/
 
 .list-pagination-container {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 832px;
     padding-left: 72px;
     margin-bottom: 5px;
@@ -1619,6 +1726,10 @@ img {
 
 .catalog-sorting {
     position: relative;
+
+    display: -webkit-box;
+
+    display: -ms-flexbox;
 
     display: flex;
     margin-bottom: 70px;
@@ -1646,7 +1757,11 @@ img {
 }
 
 .catalog-sorting ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin: 0;
     padding: 0;
 
@@ -1720,8 +1835,11 @@ img {
 }
 
 .catalog-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin: 0;
     padding: 0;
     margin-left: -40px;
@@ -1780,12 +1898,20 @@ img {
     top: 0;
     left: 0;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 360px;
     height: 380px;
     padding-top: 170px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 
     background-color: rgba(238, 238, 238, 0.7);
     opacity: 0;
@@ -1809,8 +1935,12 @@ img {
 }
 
 .price-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .price-container a {
@@ -1832,7 +1962,8 @@ img {
     width: 60px;
     height: 61px;
     padding-top: 17px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 
     font-size: 14px;
     font-weight: bold;
@@ -1848,9 +1979,15 @@ img {
 /*pagination*/
 
 .pagination {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     min-height: 70px;
     margin-bottom: 72px;
     margin-top: -10px;
@@ -1859,9 +1996,11 @@ img {
 }
 
 .pagination ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-
-    width: 90px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin: 0;
     padding: 0;
 
@@ -1926,8 +2065,13 @@ img {
 }
 
 .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     min-height: 323px;
     margin-top: 82px;
 }
@@ -1939,13 +2083,21 @@ img {
 .footer-top {
     padding-top: 65px;
     margin-bottom: 17px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .authorization-footer-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
     margin-top: -5px;
 }
 
@@ -2003,14 +2155,21 @@ img {
 }
 
 .footer .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-bottom: 35px;
 }
 
 .footer .contacts-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 
     width: 425px;
     margin: 0;
@@ -2022,8 +2181,14 @@ img {
 .footer .social {
     position: relative;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
     margin-top: 28px;
 }
 
@@ -2041,9 +2206,14 @@ img {
 }
 
 .social-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin: 0;
     padding: 0;
     margin-right: 483px;
@@ -2130,22 +2300,33 @@ img {
     height: 553px;
     margin-left: -480px;
     padding: 95px 100px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 
-    box-shadow: 0 10px 20px rgba(4, 6, 6, 0.2);
+    -webkit-box-shadow: 0 10px 20px rgba(4, 6, 6, 0.2);
+
+            box-shadow: 0 10px 20px rgba(4, 6, 6, 0.2);
     background-color: #ffffff;
 
     z-index: 10;
 }
 
 .popup-message form {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 .popup-message label {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 
     letter-spacing: 0.01em;
 }
@@ -2158,7 +2339,8 @@ img {
     margin-bottom: 33px;
     padding-left: 20px;
     padding-right: 20px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 
     border: none;
 }
@@ -2175,7 +2357,8 @@ img {
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 15px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 	border: none;
     resize: none;
 }
@@ -2195,8 +2378,8 @@ img {
     color: #464646;
 }
 
-.popup-message input[type="text"]::-moz-placeholder,
-.popup-message input[type="email"]::-moz-placeholder {
+.popup-message input[type="text"]::-moz-input-placeholder,
+.popup-message input[type="email"]::-moz-input-placeholder {
     font-family: "opensans", "Arial", sans-serif;
     font-size: 14px;
     font-weight: 400;
@@ -2264,11 +2447,15 @@ img {
 }
 
 .button-close::before {
-    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
 }
 
 .button-close::after {
-    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
 }
 
 .popup-map {
@@ -2280,7 +2467,9 @@ img {
     height: 559px;
     margin-left: -480px;
 
-    box-shadow: 0 10px 20px rgba(4, 6, 6, 0.2);
+    -webkit-box-shadow: 0 10px 20px rgba(4, 6, 6, 0.2);
+
+            box-shadow: 0 10px 20px rgba(4, 6, 6, 0.2);
 
     z-index: 10;
 }
@@ -2293,11 +2482,18 @@ img {
     z-index: 11;
 }
 
+@-webkit-keyframes bounce {
+	0% { -webkit-transform: translateY(-2000px); transform: translateY(-2000px); }
+	70% { -webkit-transform: translateY(30px); transform: translateY(30px); }
+	90% { -webkit-transform: translateY(-10px); transform: translateY(-10px); }
+	100% { -webkit-transform: translateY(0); transform: translateY(0); }
+}
+
 @keyframes bounce {
-	0% { transform: translateY(-2000px); }
-	70% { transform: translateY(30px); }
-	90% { transform: translateY(-10px); }
-	100% { transform: translateY(0); }
+	0% { -webkit-transform: translateY(-2000px); transform: translateY(-2000px); }
+	70% { -webkit-transform: translateY(30px); transform: translateY(30px); }
+	90% { -webkit-transform: translateY(-10px); transform: translateY(-10px); }
+	100% { -webkit-transform: translateY(0); transform: translateY(0); }
 }
 
 .block-show {
@@ -2306,17 +2502,27 @@ img {
 
 .popup-show {
 	display: block;
-	animation-name: bounce;
-	animation-duration: 0.6s;
+	-webkit-animation-name: bounce;
+	        animation-name: bounce;
+	-webkit-animation-duration: 0.6s;
+	        animation-duration: 0.6s;
+}
+
+@-webkit-keyframes shake {
+	0%, 100% { -webkit-transform: translateX(0); transform: translateX(0); }
+	10%, 30%, 50%, 70%, 90% { -webkit-transform: translateX(-10px); transform: translateX(-10px); }
+	20%, 40%, 60%, 80% { -webkit-transform: translateX(10px); transform: translateX(10px); }
 }
 
 @keyframes shake {
-	0%, 100% { transform: translateX(0); }
-	10%, 30%, 50%, 70%, 90% { transform: translateX(-10px); }
-	20%, 40%, 60%, 80% { transform: translateX(10px); }
+	0%, 100% { -webkit-transform: translateX(0); transform: translateX(0); }
+	10%, 30%, 50%, 70%, 90% { -webkit-transform: translateX(-10px); transform: translateX(-10px); }
+	20%, 40%, 60%, 80% { -webkit-transform: translateX(10px); transform: translateX(10px); }
 }
 
 .modal-error {
-	animation-name: shake;
-	animation-duration: 0.6s;
+	-webkit-animation-name: shake;
+	        animation-name: shake;
+	-webkit-animation-duration: 0.6s;
+	        animation-duration: 0.6s;
 }
